# electronic-symbol-generator-for-cad

./: .gitignore  README-cli.md  README-packaging.md  README.md  pyproject.toml  requirements.txt  retest  setup.cfg
.github/workflows/: main.yml
src/electronic_symbol_generator_for_cad/: __init__.py  __main__.py  sygen.py  symbolGenerator.py
src/electronic_symbol_generator_for_cad/engine/: __init__.py  layout_managers.py  models.py
src/electronic_symbol_generator_for_cad/kicad/: __init__.py  models.py
src/electronic_symbol_generator_for_cad/kicad5/: __init__.py  comments.py  kbox.py  kutils.py  metrics.py  pins.py  symbolGenerator.py  symbolGenerator_fmu.py  symbolGenerator_fsu.py  symbolGenerator_psu.py  symbols.py
tests/behavior/: test_format_json.py  test_format_kicad5.py  test_format_kicad6.py  test_into.py  utils.py
tests/data/: lf347.json
tests/data.expected/: dram-256Kx1.lib  lf347.lib  mc_68000_plcc68.kicad_sym  mc_68000_plcc68.lib  pal20r6.lib  simm-30.lib
