[metadata]
name = electronic-symbol-generator-for-cad-by-sporniket
version = 0.0.1
author = Sporniket
author_email = sporniket.studio@gmail.com
description = Electronic symbol generator for CAD, a library with a command line interface to generate symbols of electronic packages for electronic CAD suites like Kicad.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sporniket/electronic-symbol-generator-for-cad
project_urls =
    Bug Tracker = https://github.com/sporniket/electronic-symbol-generator-for-cad/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
